logreader.yml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-log-reader
spec:
  containers:
    - image: eminence.azurecr.io/log-reader@sha256:e659b067bf867d3243ec02346f2b77bb7189dfde54869fbf58ea59ebf29e78d5
      imagePullPolicy: IfNotPresent
      name: main
      volumeMounts:
        - mountPath: /logs
          name: logs
          subPathExpr: tyger_$(POD_NAME)_$(POD_UID)
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: aks-cpunp2-10114179-vmss0000ly
  nodeSelector:
    tyger: run
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoSchedule
      key: tyger
      operator: Equal
      value: run
  volumes:
    - name: logs
      hostPath:
        path: /var/log/pods
