prepuller.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prepuller
spec:
  selector:
    matchLabels:
      name: prepuller
  template:
    metadata:
      labels:
        name: prepuller
        tyger: run
    spec:
      nodeSelector:
        tyger: run
      # Configure an init container for each image you want to pull
      containers:
        - name: pause
          image: gcr.io/google_containers/pause:3.2
          resources:
            limits:
              cpu: 1m
              memory: 8Mi
            requests:
              cpu: 1m
              memory: 8Mi

      tolerations:
        - key: "tyger"
          operator: "Equal"
          value: "run"
          effect: "NoSchedule"
